edition = "2023";

package wayplatform.connect.mapon.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/way-platform/mapon-go/proto/gen/go/wayplatform/connect/mapon/v1;maponv1";

// TemperatureRecord represents a temperature reading from a sensor.
message TemperatureRecord {
  // Timestamp of the reading.
  google.protobuf.Timestamp time = 1;

  // Temperature value in Celsius.
  double value_celsius = 2;
}

// UnitTemperatureSensor groups temperature records for a specific sensor.
message UnitTemperatureSensor {
  // The sensor number.
  int32 number = 1;

  // List of temperature records.
  repeated TemperatureRecord temperatures = 2;
}

// UnitTemperatures aggregates temperature data for a specific unit.
message UnitTemperatures {
  // The ID of the unit.
  int64 unit_id = 1;

  // List of temperature sensors.
  repeated UnitTemperatureSensor sensors = 2;
}
